# maplab

algorithms/ceres-error-terms/src/parameterization/: unit3-param.cc
algorithms/localization-evaluator/: package.xml
algorithms/localization-evaluator/src/: localization-evaluator.cc  mission-aligner.cc
algorithms/loopclosure/loop-closure-handler/: CMakeLists.txt  package.xml
algorithms/loopclosure/loop-closure-handler/include/loop-closure-handler/: loop-detector-node.h
algorithms/loopclosure/loop-closure-handler/include/loop-closure-handler/visualization/: loop-closure-visualizer.h
algorithms/loopclosure/loop-closure-handler/proto/loop-closure-handler/: debug_fusion.proto
algorithms/loopclosure/loop-closure-handler/src/: loop-closure-handler.cc  loop-detector-node.cc
algorithms/loopclosure/loop-closure-handler/src/visualization/: loop-closure-visualizer.cc
algorithms/loopclosure/matching-based-loopclosure/include/matching-based-loopclosure/: detector-settings.h  kd-tree-index-interface.h  kd-tree-index.h
algorithms/loopclosure/matching-based-loopclosure/src/: detector-settings.cc  matching-based-engine.cc
algorithms/map-anchoring/src/: map-anchoring.cc
applications/rovioli-deep-reloc/: CMakeLists.txt  package.xml
applications/rovioli-deep-reloc/app/: rovioli-app.cc
applications/rovioli-deep-reloc/include/rovioli-deep-reloc/: data-publisher-flow.h  localizer-flow.h  localizer-helpers.h  localizer.h  rovioli-node.h
applications/rovioli-deep-reloc/scripts/: online_deep_reloc.sh
applications/rovioli-deep-reloc/src/: data-publisher-flow.cc  localizer-flow.cc  localizer-helpers.cc  localizer.cc  rovioli-node.cc
console-plugins/loop-closure-plugin/src/: vi-localization-evaluator.cc
maplab/: package.xml
