<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>rovioli_deep_reloc</name>
  <version>0.0.0</version>
  <description>
    Online integration of the loop closure node with deep retrieval prior.
  </description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>aslam_cv_common</depend>
  <depend>end_to_end_common</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>localization_summary_map</depend>
  <depend>loop_closure_handler</depend>
  <depend>maplab_common</depend>
  <depend>mapping_workflows_plugin</depend>
  <depend>message_flow</depend>
  <depend>sensors</depend>
  <depend>vi_map</depend>
  <depend>vi_mapping_test_app</depend>
  <depend>vio_common</depend>
  <depend>visualization</depend>
  <depend>rovioli</depend>
</package>
